# rdict

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  package.nix
.github/workflows/: build.yaml  clippy.yaml  format.yaml  nix.yaml
nix/patches/: iced-disable-wayland-on-android.patch  iced-material-disable-iced-default-features.patch  iced-winit-android-app-lifecycle.patch  winit-android-ime.patch
rdict-cli/: Cargo.toml
rdict-cli/src/: args.rs  main.rs  pager.rs
rdict-core/: Cargo.toml
rdict-core/src/: lib.rs  model.rs  parse.rs  rdict.rs  render.rs
rdict-core/src/fixtures/: hello_response.html  test123_ec.html  where_ce.html  where_cf.html  where_cj.html  where_ck.html  where_ec.html  where_fc.html  where_jc.html  where_kc.html
rdict-core/src/parse/: en.rs  example.rs  fr.rs  ja.rs  ko.rs
rdict-core/src/render/: en.rs  fr.rs  ja.rs  ko.rs
rdict-iced/: Cargo.toml
rdict-iced/res/values/: bools.xml  colors.xml  styles.xml
rdict-iced/res/values-night/: bools.xml  colors.xml
rdict-iced/res/values-v35/: styles.xml
rdict-iced/src/: app.rs  components.rs  lib.rs  main.rs  render.rs
rdict-iced/src/components/: card.rs  comparison.rs  list_item.rs  section.rs  title.rs
rdict-iced/src/render/: en.rs  fr.rs  ja.rs  ko.rs
rdict-telegram/: Cargo.toml
rdict-telegram/src/: main.rs
src/: args.rs  main.rs  parse.rs  rdict.rs
