[package]
name = "rdict"
version = "0.1.0"
authors = ["Guanran Wang <guanran928@outlook.com>"]
edition = "2024"
repository = "https://github.com/Guanran928/rdict"
license = "MIT"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
directories-next = "2.0.0"
indicatif = "0.17.11"
owo-colors = "4.2.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking", "json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.35.0", features = ["bundled"] }
rustyline = "15.0.0"
scraper = "0.23.1"
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
