[workspace]
resolver = "3"
members = ["rdict-core", "rdict-cli", "rdict-telegram"]

[workspace.package]
version = "0.3.0"
authors = ["Guanran Wang <guanran928@outlook.com>"]
description = "Youdao dictionary client written in Rust"
edition = "2024"
repository = "https://github.com/Guanran928/rdict"
license = "MIT"
readme = "README.md"
