[package]
name = "rdict_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rdict"
path = "src/main.rs"

[dependencies]
rdict_core = { path = "../rdict-core" }
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive"] }
directories-next = "2.0.0"
indicatif = "0.18.0"
owo-colors = "4.2.0"
rustyline = "16.0.0"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
console = "0.16.0"
log = "0.4.27"
env_logger = "0.11.8"
ratatui = "0.29.0"
crossterm = "0.29.0"
ansi-to-tui = "7.0.0"


[dev-dependencies]
assert_cmd = "2.0.17"
mockito = "1.7.0"
predicates = "3.1.3"
