[package]
name = "rdict_cli"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[[bin]]
name = "rdict"
path = "src/main.rs"

[dependencies]
rdict_core = { path = "../rdict-core" }
ansi-to-tui = "8.0.0"
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive"] }
clap_complete = { version = "4.5.55", features = ["unstable-dynamic"] }
console = "0.16.0"
crossterm = "0.29.0"
directories-next = "2.0.0"
env_logger = "0.11.8"
indicatif = "0.18.0"
log = "0.4.27"
owo-colors = "4.2.0"
ratatui = "0.30.0"
rustyline = "18.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }


[dev-dependencies]
assert_cmd = "2.0.17"
mockito = "1.7.0"
predicates = "3.1.3"
