[package]
name = "rdict_core"
version = "0.1.0"
authors = ["Guanran Wang <guanran928@outlook.com>"]
edition = "2024"
repository = "https://github.com/Guanran928/rdict"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
owo-colors = "4.2.0"
reqwest = { version = "0.12.15", features = [
  "blocking",
  "json",
  "rustls-tls",
], default-features = false }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
log = "0.4.27"

[dev-dependencies]
assert_cmd = "2.0.17"
mockito = "1.7.0"
predicates = "3.1.3"
