[package]
name = "rdict_core"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
owo-colors = "4.2.0"
reqwest = { version = "0.12.15", features = [
  "blocking",
  "json",
  "rustls-tls",
], default-features = false }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
log = "0.4.27"
once_cell = "1.21.3"

[dev-dependencies]
assert_cmd = "2.0.17"
mockito = "1.7.0"
predicates = "3.1.3"
