[package]
name = "rdict_core"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4.27"
owo-colors = "4.2.0"
reqwest = { version = "0.12.15", features = [
  "json",
  "rustls-tls",
], default-features = false }
scraper = "0.27.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2.0.17"
mockito = "1.7.0"
predicates = "3.1.3"
